# seqdiffhs

./: README.md  SeqDiff.cabal  run.bat  runtests.bat  seqdiffhs.cabal
src/: Main.hs  SeqDiff.hs
test/: ArbitraryPropTestData.hs  PropTestData.hs  PropertyTests.hs
