name:                SeqDiff
version:             0.1.0.0
author:              Jonathan Taylor
build-type:          Simple
cabal-version:       >=1.10

executable SeqDiff
    build-depends: base -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    default-language: Haskell2010

test-suite SeqDiff_Property_Tests
    build-depends: QuickCheck -any, base -any, containers -any, random -any
    other-modules: SeqDiff
    type: exitcode-stdio-1.0
    main-is: PropertyTests.hs
    buildable: True
    hs-source-dirs: test, src
    default-language: Haskell2010
