name:                SeqDiff
version:             0.1.0.0
author:              Jonathan Taylor
build-type:          Simple
cabal-version:       >=1.10

executable SeqDiff
    default-language: Haskell2010
    build-depends: base -any
    hs-source-dirs: src
    main-is: Main.hs

test-suite SeqDiff_Property_Tests
    default-language: Haskell2010
    build-depends: base -any, QuickCheck -any
    hs-source-dirs: test, src
    main-is: PropertyTests.hs
    type: exitcode-stdio-1.0
