name:                seqdiffhs
version:             0.1.0.0
author:              Jonathan Taylor
build-type:          Simple
cabal-version:       >=1.10

-- executable seqdiffhs
--   main-is:             Main.hs
--   -- other-modules:
--   -- other-extensions:
--   build-depends:       base >=4.8 && <4.9
--   hs-source-dirs:      src
--   default-language:    Haskell2010

executable seqdiffhs
    build-depends: base -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src

-- test-suite Bowling_Property_Tests
--     build-depends: HUnit -any, QuickCheck -any, base -any,
--                    containers -any, random -any
--     type: exitcode-stdio-1.0
--     main-is: PropertyTests.hs
--     buildable: True
--     hs-source-dirs: src
--
-- test-suite Bowling_Unit_Tests
--     build-depends: HUnit -any, QuickCheck -any, base -any,
--                    containers -any, random -any
--     type: exitcode-stdio-1.0
--     main-is: UnitTests.hs
--     buildable: True
--     hs-source-dirs: src
